[tool.poetry]
name = "sql-api-crud-fastapi"
version = "0.1.0"
description = ""
authors = ["dslucasribeiro <dslucasribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
